06_ingress_domain_dns/phpmyadmin-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-http-ingress
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: phpmyadmin-service
            port:
              number: 80
